# oauthsub

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.rst  pylintrc  requirements.txt  setup.py
cmake/: codestyle.cmake
oauthsub/: CMakeLists.txt  __init__.py  __main__.py  auth_service.py  config.py  configuration.py  util.py
oauthsub/doc/: CMakeLists.txt  README.rst  changelog.rst  conf.py  gendoc_sources.py  index.rst  installation.rst  modules.rst  systemd.rst  todo.rst  usage.rst
oauthsub/doc/examples/: atlassian.rst  buildbot.rst  discourse.rst  gerrit.rst  github.rst  google.rst  index.rst  jenkins.rst  microsoft.rst  nexus.rst  nginx.rst  phpbb.rst  providers.rst
oauthsub/example/: config.py  nginx.conf  oauthsub.service  site.conf
oauthsub/pypi/: MANIFEST.in  setup.py
oauthsub/templates/: layout.html.tpl  message.html.tpl
